[gd_scene load_steps=11 format=3 uid="uid://ddqqrtbjuoayg"]

[ext_resource type="Script" path="res://Entities/NPCs/robotnpc.gd" id="1_6wys5"]
[ext_resource type="Texture2D" uid="uid://cvlg3mkrl6oid" path="res://Entities/NPCs/robotsprite.png" id="1_qibvj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xgw45"]
atlas = ExtResource("1_qibvj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w6mr"]
atlas = ExtResource("1_qibvj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2v0x"]
atlas = ExtResource("1_qibvj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfhw1"]
atlas = ExtResource("1_qibvj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gofon"]
atlas = ExtResource("1_qibvj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rh3r"]
atlas = ExtResource("1_qibvj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_mnvuh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgw45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w6mr")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2v0x")
}],
"loop": true,
"name": &"off",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfhw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gofon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rh3r")
}],
"loop": false,
"name": &"off_to_idle",
"speed": 2.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1bppm"]
size = Vector2(16, 15.5)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_6wys5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mnvuh")
animation = &"off_to_idle"
frame = 2
frame_progress = 1.0

[node name="Area2D" type="Area2D" parent="AnimatedSprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite2D/Area2D"]
position = Vector2(0, -0.25)
shape = SubResource("RectangleShape2D_1bppm")

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_off_to_idle_finished"]
[connection signal="body_entered" from="AnimatedSprite2D/Area2D" to="." method="_on_body_entered"]
[connection signal="body_exited" from="AnimatedSprite2D/Area2D" to="." method="_on_body_exited"]
